--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "@types/node": "^14.0.11",
     "tslint": "^6.1.2",
     "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "ts-node": "^8.10.2"
   }
 }
