--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,7 @@
     "outDir": "dist",
     "sourceMap": true,
     "strict": true,
-    "target": "ES2015"
+    "target": "ES2015",
   },
   "include": [
     "src"
